Fix reopt-vcg for what4 bv-sized changes.

--- a/reopt-vcg/reopt-vcg.cabal
+++ b/reopt-vcg/reopt-vcg.cabal
@@ -29,6 +29,7 @@ executable reopt-vcg
               , aeson
               , ansi-wl-pprint
               , async
+              , bv-sized
               , bytestring
               , containers
               , directory
