Extend printf; rep stos fix.

--- a/support/x86_llvm_asm_examples/Makefile
+++ b/support/x86_llvm_asm_examples/Makefile
@@ -1,10 +1,13 @@
-run : test_movsd
+run : test_movsd test_repstos.ll
 	./test_movsd
 
 clean :
 	rm -f test_movsd *.ll
 
 test_movsd : test_movsd.ll
+	clang -o $@ $<
+
+test_repstos : test_repstos.ll
 	clang -o $@ $<
 
 %.ll : %.c
